--- a/ch01-jpa/src/main/resources/application.yml
+++ b/ch01-jpa/src/main/resources/application.yml
@@ -1,1 +1,13 @@
-
+spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings:
+        trace: false
+        web-allow-others: true
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:userdb;
+    username: sa
+    password:
