--- a/ch01-jpa/build.gradle
+++ b/ch01-jpa/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     // testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.mockito:mockito-inline:4.6.1'
 }
 
 tasks.named('test') {
