--- a/ch02-web/build.gradle
+++ b/ch02-web/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'com.wonit'
+group 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -10,12 +10,6 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.projectlombok:lombok:1.18.20'
-
-    // lombok
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
