--- a/ch02-domain/build.gradle
+++ b/ch02-domain/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '2.7.1'
 }
 
 group 'com.wonit'
@@ -9,8 +11,16 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 dependencies {
-    implementation 'org.projectlombok:lombok:1.18.20'
+
+    // jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     // lombok
     compileOnly 'org.projectlombok:lombok'
