--- a/ch02-infra/build.gradle
+++ b/ch02-infra/build.gradle
@@ -21,6 +21,10 @@ dependencies {
     // db
     runtimeOnly 'com.h2database:h2'
 
+    // lombok
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
