--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,9 @@ rootProject.name = 'ddd'
 include 'ch02-web'
 include 'ch02-infra'
 include 'ch02-domain'
+include 'jpa-jdbc'
+include 'jpa-jdbc:jpa'
+include 'jpa-jdbc:jdbc'
+include 'layer'
+include 'domain-event'
+
