--- a/layer/domain/build.gradle
+++ b/layer/domain/build.gradle
@@ -1,18 +1,13 @@
 plugins {
     id 'java'
+    id "io.freefair.lombok" version "6.5.0.3"
 }
-
-group 'org.example'
-version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-
-
-
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
