--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ rootProject.name = 'ddd'
 include 'jpa-jdbc'
 include 'jpa-jdbc:jpa'
 include 'jpa-jdbc:jdbc'
+include 'jpa-jdbc:jdbc2'
 
 include 'layer'
 include 'layer:domain'
