--- a/layer/web/src/main/resources/application.yml
+++ b/layer/web/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
         web-allow-others: true
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:ddd-layer
+    url: jdbc:h2:mem:test-db
     username: sa
     password:
   jpa:
