--- a/layer/application/build.gradle
+++ b/layer/application/build.gradle
@@ -17,7 +17,8 @@ dependencies {
     implementation project(':layer:domain')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    implementation 'org.valid4j:valid4j:0.5.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
