--- a/layer/commons/build.gradle
+++ b/layer/commons/build.gradle
@@ -1,15 +1,15 @@
 plugins {
     id 'java'
-    id "io.freefair.lombok" version "6.5.0.3"
 }
+
+group 'com.wonit'
+version '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation project(':layer:commons')
-
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
