--- a/layer/infrastructure/build.gradle
+++ b/layer/infrastructure/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation project(':layer:domain')
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'com.h2database:h2'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
