--- a/layer/infrastructure/build.gradle
+++ b/layer/infrastructure/build.gradle
@@ -17,8 +17,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.h2database:h2'
 
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.7'
+
+    implementation 'org.assertj:assertj-core:3.23.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.12.7'
 }
 
 test {
