--- a/settings.gradle
+++ b/settings.gradle
@@ -13,3 +13,11 @@ include 'layer:commons'
 include 'layer:infrastructure'
 
 include 'domain-event'
+
+include 'repository-pattern'
+include 'repository-pattern:web'
+include 'repository-pattern:domain'
+include 'repository-pattern:infrastructure'
+include 'repository-pattern:infrastructure:spring-data-jdbc'
+include 'repository-pattern:infrastructure:spring-data-jpa'
+
