--- a/repository-pattern/web/build.gradle
+++ b/repository-pattern/web/build.gradle
@@ -12,7 +12,11 @@ repositories {
 }
 
 dependencies {
+
     implementation project(':repository-pattern:domain')
+    implementation project(':repository-pattern:infrastructure')
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
