--- a/repository-pattern/infrastructure/build.gradle
+++ b/repository-pattern/infrastructure/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation project(':repository-pattern:domain')
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
     runtimeOnly 'com.h2database:h2'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
